<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <hr.johndoeveloper.canvas.ui.customview.piechartview.PieChartView
        android:id="@+id/pieChartView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/fragmentElementList"
        app:layout_constraintEnd_toStartOf="@+id/radioGroupAnimationStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/fragmentElementList"
        android:name="hr.johndoeveloper.canvas.ui.fragment.ElementListFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pieChartView" />

    <TextView
        android:id="@+id/textViewPieChartDesign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/chart_design"
        app:layout_constraintStart_toStartOf="@+id/radioGroupAnimationStyle"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupAnimationStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAnimationStyle">

        <RadioButton
            android:id="@+id/radioButtonFullCircle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/full_circle" />

        <RadioButton
            android:id="@+id/radioButtonIndividualSlices"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/individual_slices" />

        <RadioButton
            android:id="@+id/radioButtonNoAnimation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no_animation" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewAnimationStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/animation_style"
        app:layout_constraintStart_toStartOf="@+id/radioGroupAnimationStyle"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupChartDesign" />

    <RadioGroup
        android:id="@+id/radioGroupChartDesign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/textViewAnimationStyle"
        app:layout_constraintTop_toBottomOf="@+id/textViewPieChartDesign">

        <RadioButton
            android:id="@+id/radioButtonSolid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/solid" />

        <RadioButton
            android:id="@+id/radioButtonCutout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cutout" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonDraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/draw"
        app:layout_constraintEnd_toEndOf="@+id/radioGroupAnimationStyle"
        app:layout_constraintStart_toStartOf="@+id/radioGroupAnimationStyle"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupAnimationStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>